--- a/yogi.html
+++ b/yogi.html
@@ -13,6 +13,6 @@
     <p>enter password</p>
     <input type="text" name="pass">
     <br>
-    <a href="www.instagram.com"><p style="background-color:rgb(75,179,248);padding:5px 5px;display:inline-block;"> login </p></a>
+    <a href="instagram.com"><p style="background-color:rgb(75,179,248);padding:5px 5px;display:inline-block;"> login </p></a>
     <pre>OR
    Sign In With Facebook</pre>
