--- a/yogi.html
+++ b/yogi.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>instagram login</title>
 </head>
-<body style=background-color:rgb(222,222,223);">
+<body style=background-color:rgb(254,255,255);">
   <center>
-  <h2><b>INSTAGRAM</b></h2>
-  <p>Enter username,ph no,email</p>
+  <h2><b>Login To</b></h2>
+    <p>to continue ads manager</p>
+  </center>
+  <p>Enter Username</p>
   <input type="text" name="name">
-    <p>enter password</p>
+
+ <p>password</p>
     <input type="text" name="pass">
     <br>
-    <a href="instagram.com"><p style="background-color:rgb(75,179,248);padding:5px 5px;display:inline-block;"> login </p></a>
+  <center> 
+    <a href="snapchat.com"><p style="background-color:rgb(225,245,30);padding:5px 5px;display:inline-block;"> login </p></a>
     <pre>OR
-   Sign In With Facebook</pre>
+   New To Snapchat? SignUp</pre>
