--- a/yogi.html
+++ b/yogi.html
@@ -7,6 +7,7 @@
 </head>
 <body style=background-color:rgb(254,255,255);">
   <center>
+    <img src="/storage/emulated/0/Download/download.png" alt= "no image" width=50 height=50>
   <h2><b>Login To</b></h2>
     <p>to continue ads manager</p>
   </center>
