--- a/fsd2.html
+++ b/fsd2.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Interactive Dynamic Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-        body{
+        body {
+            font-family: Arial, sans-serif;
             margin: 0;
             display: flex;
             background: #f4f4f4;
         }
         .sidebar {
             width: 250px;
-            background: #f4f4f4;
+            background: #2c3e50;
+            color: white;
             padding: 20px;
             height: 100vh;
             position: fixed;
@@ -25,11 +27,11 @@
             text-decoration: none;
             margin-bottom: 10px;
             border-radius: 5px;
-            background: #1f1f1f;
+            background: #34495e;
             text-align: center;
         }
         .sidebar a:hover {
-            background: #1f1f1f;
+            background: #1abc9c;
         }
         .main-content {
             margin-left: 270px;
@@ -45,7 +47,7 @@
         }
         .chart-container {
             position: relative;
-            height: 200px;
+            height: 300px;
             width: 100%;
         }
         .button-container {
@@ -56,7 +58,7 @@
             margin-right: 10px;
             border: none;
             border-radius: 5px;
-            background: #4f4f4f;
+            background: #3498db;
             color: white;
             cursor: pointer;
         }
@@ -74,16 +76,18 @@
         <a href="#">Settings</a>
     </div>
     <div class="main-content">
-        <h1>Dashboard</h1>
+        <h1>Interactive Dynamic Dashboard</h1>
         <div class="card">
-            <h3>Chart</h3>
+            <h3>Votes</h3>
             <div class="chart-container">
                 <canvas id="myChart"></canvas>
             </div>
             <div class="button-container">
+                <center>
                 <button onclick="updateChart('bar')">Bar Chart</button>
                 <button onclick="updateChart('line')">Line Chart</button>
                 <button onclick="updateChart('doughnut')">Doughnut Chart</button>
+                 </center>
             </div>
         </div>
     </div>
@@ -116,7 +120,6 @@
                 }
             }
         });
-
         function updateChart(newType) {
             myChart.destroy();
             myChart = new Chart(ctx, {
@@ -149,3 +152,4 @@
     </script>
 </body>
 </html>
+                        
